--- a/SaraFarhadi/pom.xml
+++ b/SaraFarhadi/pom.xml
@@ -23,6 +23,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.vaadin.external.jsoup</groupId>
+			<artifactId>jsoup-case-sensitive</artifactId>
+			<version>1.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.guicedee.services</groupId>
+			<artifactId>guava</artifactId>
+			<version>1.0.17.1-jre8</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
