--- a/SaraFarhadi/pom.xml
+++ b/SaraFarhadi/pom.xml
@@ -29,6 +29,12 @@
 			<version>1.9.2</version>
 		</dependency>
 		<dependency>
+			<!-- jsoup HTML parser library @ https://jsoup.org/ -->
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.13.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.guicedee.services</groupId>
 			<artifactId>guava</artifactId>
 			<version>1.0.17.1-jre8</version>
