--- a/TomasSan/pom.xml
+++ b/TomasSan/pom.xml
@@ -35,6 +35,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<dependency>
+    		<groupId>commons-io</groupId>
+   			<artifactId>commons-io</artifactId>
+    		<version>2.8.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
