--- a/JianQiangLing/pom.xml
+++ b/JianQiangLing/pom.xml
@@ -35,6 +35,18 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+<dependency>
+    <groupId>org.apache.httpcomponents</groupId>
+    <artifactId>httpclient</artifactId>
+    <version>4.5.12</version>
+</dependency>
+
+<dependency>
+  <groupId>org.apache.httpcomponents</groupId>
+  <artifactId>httpclient</artifactId>
+  <version>4.5.12</version>
+</dependency>
 	</dependencies>
 
 	<build>
@@ -45,5 +57,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
