--- a/JianQiangLing/pom.xml
+++ b/JianQiangLing/pom.xml
@@ -35,11 +35,18 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+<dependency><groupId>junit</groupId><artifactId>junit</artifactId><version>4.12</version><scope>test</scope></dependency>
 <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
 <dependency>
     <groupId>org.apache.httpcomponents</groupId>
     <artifactId>httpclient</artifactId>
     <version>4.5.12</version>
+</dependency>
+
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-math</artifactId>
+    <version>2.2</version>
 </dependency>
 
 <dependency>
