--- a/TylerMorrison/pom.xml
+++ b/TylerMorrison/pom.xml
@@ -76,6 +76,13 @@
 		    <version>2.8.0</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
