--- a/TomasSan/pom.xml
+++ b/TomasSan/pom.xml
@@ -10,12 +10,14 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>spring-boot</artifactId>
+	<packaging>jar</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-boot</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
+		<testSourceDirectory>E:\eclipse-workspace\Work\demo\src\test\java\com\example\demo</testSourceDirectory>
 	</properties>
 
 	<dependencies>
@@ -28,18 +30,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		
 		<dependency>
     		<groupId>commons-io</groupId>
    			<artifactId>commons-io</artifactId>
     		<version>2.8.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -48,6 +51,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			
+			<plugin>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-surefire-plugin</artifactId>
+    			<version>2.22.1</version>
 			</plugin>
 		</plugins>
 	</build>
